<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/tvTitleHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/layContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_90sdp"
        android:padding="@dimen/_2sdp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/white_round"
            android:elevation="@dimen/_5sdp"
            android:padding="@dimen/_5sdp">


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/lay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_105sdp"
            android:background="@drawable/transparent"
            android:elevation="@dimen/_5sdp">

            <android.support.v7.widget.CardView
                android:id="@+id/imageCardView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_3sdp"
                app:cardElevation="@dimen/_8sdp">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="@dimen/_85sdp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@drawable/test_image" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@+id/imageCardView"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">


                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:baselineAligned="false"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release_date"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text=""
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/popularity"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvPopularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zero"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:baselineAligned="false"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/star" />

                        <TextView
                            android:id="@+id/tvRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:text="@string/_0_10"
                            android:textSize="@dimen/_11sdp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/adult"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvAdult"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />


                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_5sdp">

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12sdp" />


        </ScrollView>

    </RelativeLayout>


</RelativeLayout>